qt/gen_qtreeview.h

typedef struct QAbstractItemModel QAbstractItemModel;
typedef struct QHeaderView QHeaderView;
typedef struct QItemSelectionModel QItemSelectionModel;
typedef struct QMetaObject QMetaObject;
typedef struct QModelIndex QModelIndex;
typedef struct QPoint QPoint;
typedef struct QRect QRect;
typedef struct QTreeView QTreeView;
typedef struct QWidget QWidget;
QTreeView* QTreeView_new(QWidget* parent);
QTreeView* QTreeView_new2();
QMetaObject* QTreeView_metaObject(const QTreeView* self);
void* QTreeView_metacast(QTreeView* self, const char* param1);
int QTreeView_metacall(QTreeView* self, int param1, int param2, void** param3);
struct miqt_string QTreeView_tr(const char* s);
struct miqt_string QTreeView_trUtf8(const char* s);
void QTreeView_setModel(QTreeView* self, QAbstractItemModel* model);
void QTreeView_setRootIndex(QTreeView* self, QModelIndex* index);
void QTreeView_setSelectionModel(QTreeView* self, QItemSelectionModel* selectionModel);
QHeaderView* QTreeView_header(const QTreeView* self);
void QTreeView_setHeader(QTreeView* self, QHeaderView* header);
int QTreeView_autoExpandDelay(const QTreeView* self);
void QTreeView_setAutoExpandDelay(QTreeView* self, int delay);
int QTreeView_indentation(const QTreeView* self);
void QTreeView_setIndentation(QTreeView* self, int i);
void QTreeView_resetIndentation(QTreeView* self);
bool QTreeView_rootIsDecorated(const QTreeView* self);
void QTreeView_setRootIsDecorated(QTreeView* self, bool show);
bool QTreeView_uniformRowHeights(const QTreeView* self);
void QTreeView_setUniformRowHeights(QTreeView* self, bool uniform);
bool QTreeView_itemsExpandable(const QTreeView* self);
void QTreeView_setItemsExpandable(QTreeView* self, bool enable);
bool QTreeView_expandsOnDoubleClick(const QTreeView* self);
void QTreeView_setExpandsOnDoubleClick(QTreeView* self, bool enable);
int QTreeView_columnViewportPosition(const QTreeView* self, int column);
int QTreeView_columnWidth(const QTreeView* self, int column);
void QTreeView_setColumnWidth(QTreeView* self, int column, int width);
int QTreeView_columnAt(const QTreeView* self, int x);
bool QTreeView_isColumnHidden(const QTreeView* self, int column);
void QTreeView_setColumnHidden(QTreeView* self, int column, bool hide);
bool QTreeView_isHeaderHidden(const QTreeView* self);
void QTreeView_setHeaderHidden(QTreeView* self, bool hide);
bool QTreeView_isRowHidden(const QTreeView* self, int row, QModelIndex* parent);
void QTreeView_setRowHidden(QTreeView* self, int row, QModelIndex* parent, bool hide);
bool QTreeView_isFirstColumnSpanned(const QTreeView* self, int row, QModelIndex* parent);
void QTreeView_setFirstColumnSpanned(QTreeView* self, int row, QModelIndex* parent, bool span);
bool QTreeView_isExpanded(const QTreeView* self, QModelIndex* index);
void QTreeView_setExpanded(QTreeView* self, QModelIndex* index, bool expand);
void QTreeView_setSortingEnabled(QTreeView* self, bool enable);
bool QTreeView_isSortingEnabled(const QTreeView* self);
void QTreeView_setAnimated(QTreeView* self, bool enable);
bool QTreeView_isAnimated(const QTreeView* self);
void QTreeView_setAllColumnsShowFocus(QTreeView* self, bool enable);
bool QTreeView_allColumnsShowFocus(const QTreeView* self);
void QTreeView_setWordWrap(QTreeView* self, bool on);
bool QTreeView_wordWrap(const QTreeView* self);
void QTreeView_setTreePosition(QTreeView* self, int logicalIndex);
int QTreeView_treePosition(const QTreeView* self);
void QTreeView_keyboardSearch(QTreeView* self, struct miqt_string search);
QRect* QTreeView_visualRect(const QTreeView* self, QModelIndex* index);
void QTreeView_scrollTo(QTreeView* self, QModelIndex* index, int hint);
QModelIndex* QTreeView_indexAt(const QTreeView* self, QPoint* p);
QModelIndex* QTreeView_indexAbove(const QTreeView* self, QModelIndex* index);
QModelIndex* QTreeView_indexBelow(const QTreeView* self, QModelIndex* index);
void QTreeView_doItemsLayout(QTreeView* self);
void QTreeView_reset(QTreeView* self);
void QTreeView_dataChanged(QTreeView* self, QModelIndex* topLeft, QModelIndex* bottomRight, struct miqt_array /* of int */  roles);
void QTreeView_selectAll(QTreeView* self);
void QTreeView_expanded(QTreeView* self, QModelIndex* index);
void QTreeView_connect_expanded(QTreeView* self, intptr_t slot);
void QTreeView_collapsed(QTreeView* self, QModelIndex* index);
void QTreeView_connect_collapsed(QTreeView* self, intptr_t slot);
void QTreeView_hideColumn(QTreeView* self, int column);
void QTreeView_showColumn(QTreeView* self, int column);
void QTreeView_expand(QTreeView* self, QModelIndex* index);
void QTreeView_collapse(QTreeView* self, QModelIndex* index);
void QTreeView_resizeColumnToContents(QTreeView* self, int column);
void QTreeView_sortByColumn(QTreeView* self, int column);
void QTreeView_sortByColumn2(QTreeView* self, int column, int order);
void QTreeView_expandAll(QTreeView* self);
void QTreeView_expandRecursively(QTreeView* self, QModelIndex* index);
void QTreeView_collapseAll(QTreeView* self);
void QTreeView_expandToDepth(QTreeView* self, int depth);
struct miqt_string QTreeView_tr2(const char* s, const char* c);
struct miqt_string QTreeView_tr3(const char* s, const char* c, int n);
struct miqt_string QTreeView_trUtf82(const char* s, const char* c);
struct miqt_string QTreeView_trUtf83(const char* s, const char* c, int n);
void QTreeView_expandRecursively2(QTreeView* self, QModelIndex* index, int depth);
bool QTreeView_override_virtual_metaObject(void* self, intptr_t slot);
QMetaObject* QTreeView_virtualbase_metaObject(const void* self);
bool QTreeView_override_virtual_metacast(void* self, intptr_t slot);
void* QTreeView_virtualbase_metacast(void* self, const char* param1);
bool QTreeView_override_virtual_metacall(void* self, intptr_t slot);
int QTreeView_virtualbase_metacall(void* self, int param1, int param2, void** param3);
bool QTreeView_override_virtual_setModel(void* self, intptr_t slot);
void QTreeView_virtualbase_setModel(void* self, QAbstractItemModel* model);
bool QTreeView_override_virtual_setRootIndex(void* self, intptr_t slot);
void QTreeView_virtualbase_setRootIndex(void* self, QModelIndex* index);
bool QTreeView_override_virtual_setSelectionModel(void* self, intptr_t slot);
void QTreeView_virtualbase_setSelectionModel(void* self, QItemSelectionModel* selectionModel);
bool QTreeView_override_virtual_keyboardSearch(void* self, intptr_t slot);
void QTreeView_virtualbase_keyboardSearch(void* self, struct miqt_string search);
bool QTreeView_override_virtual_visualRect(void* self, intptr_t slot);
QRect* QTreeView_virtualbase_visualRect(const void* self, QModelIndex* index);
bool QTreeView_override_virtual_scrollTo(void* self, intptr_t slot);
void QTreeView_virtualbase_scrollTo(void* self, QModelIndex* index, int hint);
bool QTreeView_override_virtual_indexAt(void* self, intptr_t slot);
QModelIndex* QTreeView_virtualbase_indexAt(const void* self, QPoint* p);
bool QTreeView_override_virtual_doItemsLayout(void* self, intptr_t slot);
void QTreeView_virtualbase_doItemsLayout(void* self);
bool QTreeView_override_virtual_reset(void* self, intptr_t slot);
void QTreeView_virtualbase_reset(void* self);
bool QTreeView_override_virtual_dataChanged(void* self, intptr_t slot);
void QTreeView_virtualbase_dataChanged(void* self, QModelIndex* topLeft, QModelIndex* bottomRight, struct miqt_array /* of int */  roles);
bool QTreeView_override_virtual_selectAll(void* self, intptr_t slot);
void QTreeView_virtualbase_selectAll(void* self);
void QTreeView_virtualbase_verticalScrollbarValueChanged(void* self, int value);