qt/gen_qtreeview.nim


proc fcQTreeView_new(parent: pointer): ptr cQTreeView {.importc: "QTreeView_new".}
proc fcQTreeView_new2(): ptr cQTreeView {.importc: "QTreeView_new2".}
proc fcQTreeView_metaObject(self: pointer, ): pointer {.importc: "QTreeView_metaObject".}
proc fcQTreeView_metacast(self: pointer, param1: cstring): pointer {.importc: "QTreeView_metacast".}
proc fcQTreeView_metacall(self: pointer, param1: cint, param2: cint, param3: pointer): cint {.importc: "QTreeView_metacall".}
proc fcQTreeView_tr(s: cstring): struct_miqt_string {.importc: "QTreeView_tr".}
proc fcQTreeView_trUtf8(s: cstring): struct_miqt_string {.importc: "QTreeView_trUtf8".}
proc fcQTreeView_setModel(self: pointer, model: pointer): void {.importc: "QTreeView_setModel".}
proc fcQTreeView_setRootIndex(self: pointer, index: pointer): void {.importc: "QTreeView_setRootIndex".}
proc fcQTreeView_setSelectionModel(self: pointer, selectionModel: pointer): void {.importc: "QTreeView_setSelectionModel".}
proc fcQTreeView_header(self: pointer, ): pointer {.importc: "QTreeView_header".}
proc fcQTreeView_setHeader(self: pointer, header: pointer): void {.importc: "QTreeView_setHeader".}
proc fcQTreeView_autoExpandDelay(self: pointer, ): cint {.importc: "QTreeView_autoExpandDelay".}
proc fcQTreeView_setAutoExpandDelay(self: pointer, delay: cint): void {.importc: "QTreeView_setAutoExpandDelay".}
proc fcQTreeView_indentation(self: pointer, ): cint {.importc: "QTreeView_indentation".}
proc fcQTreeView_setIndentation(self: pointer, i: cint): void {.importc: "QTreeView_setIndentation".}
proc fcQTreeView_resetIndentation(self: pointer, ): void {.importc: "QTreeView_resetIndentation".}
proc fcQTreeView_rootIsDecorated(self: pointer, ): bool {.importc: "QTreeView_rootIsDecorated".}
proc fcQTreeView_setRootIsDecorated(self: pointer, show: bool): void {.importc: "QTreeView_setRootIsDecorated".}
proc fcQTreeView_uniformRowHeights(self: pointer, ): bool {.importc: "QTreeView_uniformRowHeights".}
proc fcQTreeView_setUniformRowHeights(self: pointer, uniform: bool): void {.importc: "QTreeView_setUniformRowHeights".}
proc fcQTreeView_itemsExpandable(self: pointer, ): bool {.importc: "QTreeView_itemsExpandable".}
proc fcQTreeView_setItemsExpandable(self: pointer, enable: bool): void {.importc: "QTreeView_setItemsExpandable".}
proc fcQTreeView_expandsOnDoubleClick(self: pointer, ): bool {.importc: "QTreeView_expandsOnDoubleClick".}
proc fcQTreeView_setExpandsOnDoubleClick(self: pointer, enable: bool): void {.importc: "QTreeView_setExpandsOnDoubleClick".}
proc fcQTreeView_columnViewportPosition(self: pointer, column: cint): cint {.importc: "QTreeView_columnViewportPosition".}
proc fcQTreeView_columnWidth(self: pointer, column: cint): cint {.importc: "QTreeView_columnWidth".}
proc fcQTreeView_setColumnWidth(self: pointer, column: cint, width: cint): void {.importc: "QTreeView_setColumnWidth".}
proc fcQTreeView_columnAt(self: pointer, x: cint): cint {.importc: "QTreeView_columnAt".}
proc fcQTreeView_isColumnHidden(self: pointer, column: cint): bool {.importc: "QTreeView_isColumnHidden".}
proc fcQTreeView_setColumnHidden(self: pointer, column: cint, hide: bool): void {.importc: "QTreeView_setColumnHidden".}
proc fcQTreeView_isHeaderHidden(self: pointer, ): bool {.importc: "QTreeView_isHeaderHidden".}
proc fcQTreeView_setHeaderHidden(self: pointer, hide: bool): void {.importc: "QTreeView_setHeaderHidden".}
proc fcQTreeView_isRowHidden(self: pointer, row: cint, parent: pointer): bool {.importc: "QTreeView_isRowHidden".}
proc fcQTreeView_setRowHidden(self: pointer, row: cint, parent: pointer, hide: bool): void {.importc: "QTreeView_setRowHidden".}
proc fcQTreeView_isFirstColumnSpanned(self: pointer, row: cint, parent: pointer): bool {.importc: "QTreeView_isFirstColumnSpanned".}
proc fcQTreeView_setFirstColumnSpanned(self: pointer, row: cint, parent: pointer, span: bool): void {.importc: "QTreeView_setFirstColumnSpanned".}
proc fcQTreeView_isExpanded(self: pointer, index: pointer): bool {.importc: "QTreeView_isExpanded".}
proc fcQTreeView_setExpanded(self: pointer, index: pointer, expand: bool): void {.importc: "QTreeView_setExpanded".}
proc fcQTreeView_setSortingEnabled(self: pointer, enable: bool): void {.importc: "QTreeView_setSortingEnabled".}
proc fcQTreeView_isSortingEnabled(self: pointer, ): bool {.importc: "QTreeView_isSortingEnabled".}
proc fcQTreeView_setAnimated(self: pointer, enable: bool): void {.importc: "QTreeView_setAnimated".}
proc fcQTreeView_isAnimated(self: pointer, ): bool {.importc: "QTreeView_isAnimated".}
proc fcQTreeView_setAllColumnsShowFocus(self: pointer, enable: bool): void {.importc: "QTreeView_setAllColumnsShowFocus".}
proc fcQTreeView_allColumnsShowFocus(self: pointer, ): bool {.importc: "QTreeView_allColumnsShowFocus".}
proc fcQTreeView_setWordWrap(self: pointer, on: bool): void {.importc: "QTreeView_setWordWrap".}
proc fcQTreeView_wordWrap(self: pointer, ): bool {.importc: "QTreeView_wordWrap".}
proc fcQTreeView_setTreePosition(self: pointer, logicalIndex: cint): void {.importc: "QTreeView_setTreePosition".}
proc fcQTreeView_treePosition(self: pointer, ): cint {.importc: "QTreeView_treePosition".}
proc fcQTreeView_keyboardSearch(self: pointer, search: struct_miqt_string): void {.importc: "QTreeView_keyboardSearch".}
proc fcQTreeView_visualRect(self: pointer, index: pointer): pointer {.importc: "QTreeView_visualRect".}
proc fcQTreeView_scrollTo(self: pointer, index: pointer, hint: cint): void {.importc: "QTreeView_scrollTo".}
proc fcQTreeView_indexAt(self: pointer, p: pointer): pointer {.importc: "QTreeView_indexAt".}
proc fcQTreeView_indexAbove(self: pointer, index: pointer): pointer {.importc: "QTreeView_indexAbove".}
proc fcQTreeView_indexBelow(self: pointer, index: pointer): pointer {.importc: "QTreeView_indexBelow".}
proc fcQTreeView_doItemsLayout(self: pointer, ): void {.importc: "QTreeView_doItemsLayout".}
proc fcQTreeView_reset(self: pointer, ): void {.importc: "QTreeView_reset".}
proc fcQTreeView_dataChanged(self: pointer, topLeft: pointer, bottomRight: pointer, roles: struct_miqt_array): void {.importc: "QTreeView_dataChanged".}
proc fcQTreeView_selectAll(self: pointer, ): void {.importc: "QTreeView_selectAll".}
proc fcQTreeView_expanded(self: pointer, index: pointer): void {.importc: "QTreeView_expanded".}
proc fQTreeView_connect_expanded(self: pointer, slot: int) {.importc: "QTreeView_connect_expanded".}
proc fcQTreeView_collapsed(self: pointer, index: pointer): void {.importc: "QTreeView_collapsed".}
proc fQTreeView_connect_collapsed(self: pointer, slot: int) {.importc: "QTreeView_connect_collapsed".}
proc fcQTreeView_hideColumn(self: pointer, column: cint): void {.importc: "QTreeView_hideColumn".}
proc fcQTreeView_showColumn(self: pointer, column: cint): void {.importc: "QTreeView_showColumn".}
proc fcQTreeView_expand(self: pointer, index: pointer): void {.importc: "QTreeView_expand".}
proc fcQTreeView_collapse(self: pointer, index: pointer): void {.importc: "QTreeView_collapse".}
proc fcQTreeView_resizeColumnToContents(self: pointer, column: cint): void {.importc: "QTreeView_resizeColumnToContents".}
proc fcQTreeView_sortByColumn(self: pointer, column: cint): void {.importc: "QTreeView_sortByColumn".}
proc fcQTreeView_sortByColumn2(self: pointer, column: cint, order: cint): void {.importc: "QTreeView_sortByColumn2".}
proc fcQTreeView_expandAll(self: pointer, ): void {.importc: "QTreeView_expandAll".}
proc fcQTreeView_expandRecursively(self: pointer, index: pointer): void {.importc: "QTreeView_expandRecursively".}
proc fcQTreeView_collapseAll(self: pointer, ): void {.importc: "QTreeView_collapseAll".}
proc fcQTreeView_expandToDepth(self: pointer, depth: cint): void {.importc: "QTreeView_expandToDepth".}
proc fcQTreeView_tr2(s: cstring, c: cstring): struct_miqt_string {.importc: "QTreeView_tr2".}
proc fcQTreeView_tr3(s: cstring, c: cstring, n: cint): struct_miqt_string {.importc: "QTreeView_tr3".}
proc fcQTreeView_trUtf82(s: cstring, c: cstring): struct_miqt_string {.importc: "QTreeView_trUtf82".}
proc fcQTreeView_trUtf83(s: cstring, c: cstring, n: cint): struct_miqt_string {.importc: "QTreeView_trUtf83".}
proc fcQTreeView_expandRecursively2(self: pointer, index: pointer, depth: cint): void {.importc: "QTreeView_expandRecursively2".}
proc fQTreeView_virtualbase_metaObject(self: pointer, ): pointer{.importc: "QTreeView_virtualbase_metaObject".}
proc fcQTreeView_override_virtual_metaObject(self: pointer, slot: int) {.importc: "QTreeView_override_virtual_metaObject".}
proc fQTreeView_virtualbase_metacast(self: pointer, param1: cstring): pointer{.importc: "QTreeView_virtualbase_metacast".}
proc fcQTreeView_override_virtual_metacast(self: pointer, slot: int) {.importc: "QTreeView_override_virtual_metacast".}
proc fQTreeView_virtualbase_metacall(self: pointer, param1: cint, param2: cint, param3: pointer): cint{.importc: "QTreeView_virtualbase_metacall".}
proc fcQTreeView_override_virtual_metacall(self: pointer, slot: int) {.importc: "QTreeView_override_virtual_metacall".}
proc fQTreeView_virtualbase_setModel(self: pointer, model: pointer): void{.importc: "QTreeView_virtualbase_setModel".}
proc fcQTreeView_override_virtual_setModel(self: pointer, slot: int) {.importc: "QTreeView_override_virtual_setModel".}
proc fQTreeView_virtualbase_setRootIndex(self: pointer, index: pointer): void{.importc: "QTreeView_virtualbase_setRootIndex".}
proc fcQTreeView_override_virtual_setRootIndex(self: pointer, slot: int) {.importc: "QTreeView_override_virtual_setRootIndex".}
proc fQTreeView_virtualbase_setSelectionModel(self: pointer, selectionModel: pointer): void{.importc: "QTreeView_virtualbase_setSelectionModel".}
proc fcQTreeView_override_virtual_setSelectionModel(self: pointer, slot: int) {.importc: "QTreeView_override_virtual_setSelectionModel".}
proc fQTreeView_virtualbase_keyboardSearch(self: pointer, search: struct_miqt_string): void{.importc: "QTreeView_virtualbase_keyboardSearch".}
proc fcQTreeView_override_virtual_keyboardSearch(self: pointer, slot: int) {.importc: "QTreeView_override_virtual_keyboardSearch".}
proc fQTreeView_virtualbase_visualRect(self: pointer, index: pointer): pointer{.importc: "QTreeView_virtualbase_visualRect".}
proc fcQTreeView_override_virtual_visualRect(self: pointer, slot: int) {.importc: "QTreeView_override_virtual_visualRect".}
proc fQTreeView_virtualbase_scrollTo(self: pointer, index: pointer, hint: cint): void{.importc: "QTreeView_virtualbase_scrollTo".}
proc fcQTreeView_override_virtual_scrollTo(self: pointer, slot: int) {.importc: "QTreeView_override_virtual_scrollTo".}
proc fQTreeView_virtualbase_indexAt(self: pointer, p: pointer): pointer{.importc: "QTreeView_virtualbase_indexAt".}
proc fcQTreeView_override_virtual_indexAt(self: pointer, slot: int) {.importc: "QTreeView_override_virtual_indexAt".}
proc fQTreeView_virtualbase_doItemsLayout(self: pointer, ): void{.importc: "QTreeView_virtualbase_doItemsLayout".}
proc fcQTreeView_override_virtual_doItemsLayout(self: pointer, slot: int) {.importc: "QTreeView_override_virtual_doItemsLayout".}
proc fQTreeView_virtualbase_reset(self: pointer, ): void{.importc: "QTreeView_virtualbase_reset".}
proc fcQTreeView_override_virtual_reset(self: pointer, slot: int) {.importc: "QTreeView_override_virtual_reset".}
proc fQTreeView_virtualbase_dataChanged(self: pointer, topLeft: pointer, bottomRight: pointer, roles: struct_miqt_array): void{.importc: "QTreeView_virtualbase_dataChanged".}
proc fcQTreeView_override_virtual_dataChanged(self: pointer, slot: int) {.importc: "QTreeView_override_virtual_dataChanged".}
proc fQTreeView_virtualbase_selectAll(self: pointer, ): void{.importc: "QTreeView_virtualbase_selectAll".}
proc fcQTreeView_override_virtual_selectAll(self: pointer, slot: int) {.importc: "QTreeView_override_virtual_selectAll".}
proc fQTreeView_virtualbase_verticalScrollbarValueChanged(self: pointer, value: cint): void{.importc: "QTreeView_virtualbase_verticalScrollbarValueChanged".}
